# CCFsite

./: README.md  main.py  pyproject.toml  vercel.json
src/: index.html  styles.css
