[project]
name = "carolina-chip-fab-site"
version = "0.1.0"
description = "Local FastAPI server for the Carolina Chip Fab static site"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.1",
]

[project.urls]
homepage = "https://github.com/Carolina-Chip-Fab/site"

